@@ -1,15 +1,19 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
-    id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.flywaydb.flyway' version '9.22.3'
+    id 'org.springframework.boot' version '3.5.3'
+    id 'io.spring.dependency-management' version '1.1.6'
+    id 'org.flywaydb.flyway' version '10.0.0'
 }
 
 group = 'com.trademaster'
 version = '1.0.0'
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = '24'
+    targetCompatibility = '24'
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(24)
+    }
 }
 
 configurations {
@@ -103,4 +107,23 @@ flyway {
     password = 'trademaster_password'
     locations = ['classpath:db/migration']
     baselineOnMigrate = true
+    validateOnMigrate = true
+}
+
+// JVM arguments for virtual threads
+applicationDefaultJvmArgs = [
+    "-Dspring.threads.virtual.enabled=true",
+    "--enable-preview"
+]
+
+compileJava {
+    options.compilerArgs += [
+        '--enable-preview'
+    ]
+}
+
+// Spring Boot configuration
+springBoot {
+    mainClass = 'com.trademaster.userprofile.UserProfileServiceApplication'
+    buildInfo()
 }
